# GuildBotics

./: .gitignore  AGENTS.md  CONTRIBUTING.ja.md  CONTRIBUTING.md  README.ja.md  README.md  pyproject.toml
.claude/: project.md
.gemini/: sandbox.Dockerfile
.github/workflows/: ci.yml  desktop-linux.yml  desktop-macos.yml  desktop-typescript.yml
desktop/: .gitignore  .prettierignore  README.md  eslint.config.js  index.html  jscpd.config.json  package-lock.json  package.json  playwright.config.ts  vite.config.ts
desktop/e2e/: commands.spec.ts  diagnostics.spec.ts  failure.spec.ts  members.spec.ts  service.spec.ts  setup.spec.ts  start-stack.mjs
desktop/sidecar/: guildbotics-app-api.spec  guildbotics-cli.spec
desktop/src/: App.test.tsx  App.tsx  Bootstrap.test.tsx  Bootstrap.tsx  Commands.test.tsx  Diagnostics.test.tsx  ServiceRuntime.test.tsx  cliAgent.ts  i18n.test.ts  i18n.ts  main.tsx  styles.css  trace.test.ts  trace.ts  tracePresentation.test.ts  tracePresentation.ts  traceStatus.ts  vite-env.d.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: ARCHITECTURE.md  chat_event_runtime_refactor_plan.ja.md  chat_workflow_design.ja.md  cli_reference.md  custom_command_guide.en.md  custom_command_guide.ja.md  desktop_app_plan.ja.md  native_agent_runtime.en.md  native_agent_runtime.ja.md  runtime_diagnostics_todo.ja.md  storage_roots.ja.md  test_gap_analysis.ja.md
docs/spec/: human_member_desktop_settings_policy.ja.md  member_capability_chat_workflow_plan.ja.md  member_capability_ticket_workflow_plan.ja.md  member_memory_cold_path_phase2.ja.md  member_memory_plan.ja.md  member_prompt_layering_plan.ja.md  personal_memory_roadmap.ja.md  secret_store.ja.md  ticket_driven_workflow_issue_comment_ux.ja.md  ticket_driven_workflow_rate_limit_handling.ja.md  ticket_driven_workflow_simplification.ja.md  workflow_invocation_architecture_plan.ja.md
guildbotics/app_api/: __init__.py  __main__.py  activity_events.py  activity_history.py  activity_links.py  agent_streams.py  api.py  avatar.py  cli_agents.py  diagnostics.py  diagnostics_events.py  diagnostics_store.py  errors.py  events.py  intelligences.py  lifecycle.py  llm_providers.py  models.py  runtime.py  server.py  system_alerts.py  trace_presentations.py  verify.py
guildbotics/capabilities/: __init__.py  completion_retry.py  github_activity_events.py  member_activity_events.py  member_chat.py  member_git.py  member_github.py  member_memory.py  member_memory_audit.py  member_reference.py  task_runs.py  workflow_completion_events.py  workflow_rate_limits.py
guildbotics/cli/: __init__.py  _options.py  member.py  reference.py  secrets.py  workspace.py
guildbotics/commands/: arguments.py  command_base.py  discovery.py  errors.py  markdown_command.py  models.py  print_command.py  python_command.py  registry.py  shell_script_command.py  spec_factory.py  to_html_command.py  to_pdf_command.py  yaml_command.py
scripts/: desktop-build-all.sh  desktop-build-backend.sh  desktop-build-frontend.sh  desktop-dev-all.sh  desktop-dev-backend.sh  desktop-dev-frontend.sh  desktop-dev-tauri.sh  desktop-smoke-sidecars.sh  desktop-target.sh  desktop-write-dev-binaries.sh  generate-cli-reference.py  validate_cognee_forget.py
tests/: conftest.py
(+355 files in other folders)
