[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "guildbotics"
dynamic = ["version"]
description = "A tool to collaborate with AI agents via a task board"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12,<3.14"
license-files = [
  "LICENSE",
  "third_party_licenses/**",
]
authors = [
  { name = "Ototadana" },
]
keywords = ["agents", "multi-agent", "automation", "workflow"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Intended Audience :: Developers",
  "Environment :: Console",
  "Topic :: Utilities",
]
dependencies = [
  "click>=8.1.8,<9.0",
  "pydantic>=2.11,<3.0",
  "python-dotenv>=1.0",
  "keyring>=25.0,<26.0",
  "PyYAML>=6.0",
  "httpx>=0.28,<1.0",
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "cryptography>=45,<47",
  "PyJWT>=2.8",
  "croniter>=3.0",
  "GitPython>=3.1",
  "python-i18n>=0.3",
  "langcodes>=3.3",
  # Engines/brains
  "agno>=1.7,<2.0",
  "requests>=2.32",
  "google-genai>=1.29,<2.0",
  "openai>=1.106,<3.0",
  "anthropic>=0.40,<1.0",
  "jinja2>=3.1.6",
  "markdown-it-py>=4.0.0",
  "weasyprint>=66.0",
  "websockets>=15.0.1",
]

[project.urls]
Homepage = "https://github.com/GuildBotics/GuildBotics"
Source = "https://github.com/GuildBotics/GuildBotics"
Issues = "https://github.com/GuildBotics/GuildBotics/issues"

[project.scripts]
guildbotics = "guildbotics.cli:main"

[project.optional-dependencies]
dev = [
  "black>=24.0",
  "mypy>=1.15",
  "pylint>=3.3",
  "ruff>=0.11",
  "types-requests>=2.32",
  "types-PyYAML>=6.0",
]
test = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
]
redis = [
  "redis>=5.0",
]


[tool.hatch.build.targets.wheel]
packages = ["guildbotics"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "guildbotics/_version.py"

[tool.ruff]
target-version = "py312"
extend-exclude = ["guildbotics/_version.py"]

[tool.ruff.lint]
select = [
  "F",
  "I",
  "B",
  "UP",
  "E",
  "SIM",
  "C4",
  "RUF005",
  "RUF001",
  "RUF002",
  "RUF009",
  "RUF010",
  "RUF012",
  "RUF021",
  "RUF022",
  "RUF059",
  "RUF100",
  "PLC0207",
  "PLR1711",
  "PLR1714",
  "PLR2004",
  "PLR5501",
  "PLW2901",
]
ignore = [
  "E501",
]

[tool.mypy]
python_version = "3.12"
packages = ["guildbotics"]
exclude = [
  "^tests/",
]
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pylint.main]
py-version = "3.12"

[tool.pylint.messages_control]
disable = ["all"]
enable = ["duplicate-code"]

[tool.pylint.similarities]
ignore-comments = true
ignore-docstrings = true
ignore-imports = true
ignore-signatures = true
